--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=0.1.0
 author=Tedd OKANO
 maintainer=Tedd OKANO
 sentence=Class library for NXP GPIO drivers
-paragraph=PCAL6534 is supported
+paragraph=PCAL6408A, PCAL6416A, PCAL6524 and PCAL6534 are supported
 category=Device Control
 url=https://github.com/teddokano/GPIO_NXP_Arduino
 architectures=*
