--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=GPIO_NXP_Arduino
-version=0.1.1
+version=0.2.0
 author=Tedd OKANO
 maintainer=Tedd OKANO
 sentence=Class library for NXP GPIO drivers
-paragraph=PCAL6408A, PCAL6416A, PCAL6524 and PCAL6534 are supported
+paragraph=PCAL6408A, PCAL6416A, PCAL6524, PCAL6534 and PCA9555 are supported
 category=Device Control
 url=https://github.com/teddokano/GPIO_NXP_Arduino
 architectures=*
